maze.lessons.maze.island.IslandMaze.scala.error
Escaper:37: error: not found: value DirectionNORTH
	while (estFaceMur()==false && getDirection()==DirectionNORTH){
                                                      ^